--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   chinese_font_library: ^1.2.0
+  go_router: ^16.2.1
 
 dev_dependencies:
   flutter_test:
